@startuml

interface FoodCategoryService {
    +findByName(name: String): FoodCategory
    +update(id: Long, name: String, description: String): FoodCategory
    ...
}

class FoodCategoryServiceImpl {
    +findByName(name: String): FoodCategory
    +update(id: Long, name: String, description: String): FoodCategory
    -categoryRepository: FoodCategoryRepository
    ...
}

interface FoodCategoryRepository {
    +findByName(name: String): FoodCategory
    +findById(id: Long): Optional<FoodCategory>
    +save(category: FoodCategory): FoodCategory
    ...
}

class FoodCategory {
    -id: Long
    -name: String
    -description: String
}

class CategoryForm {
    -name: String
    -description: String
}

CategoryController --> FoodCategoryService : uses
FoodCategoryService <|.. FoodCategoryServiceImpl
FoodCategoryServiceImpl --> FoodCategoryRepository : uses
FoodCategoryRepository --> FoodCategory : manages
CategoryController --> CategoryForm : uses

@enduml
